--- a/arch/arm/configs/fancykernel_ext_tuna_defconfig
+++ b/arch/arm/configs/fancykernel_ext_tuna_defconfig
@@ -1168,6 +1168,7 @@ CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_COLOR_CONTROL=y
 CONFIG_BLX=y
 CONFIG_SOUND_CONTROL=y
+CONFIG_TEMP_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
