--- a/arch/arm/configs/fancykernel_std_tuna_defconfig
+++ b/arch/arm/configs/fancykernel_std_tuna_defconfig
@@ -1168,6 +1168,7 @@ CONFIG_LTE_MODEM_CMC221=y
 CONFIG_COLOR_CONTROL=y
 CONFIG_BLX=y
 # CONFIG_SOUND_CONTROL is not set
+# CONFIG_TEMP_CONTROL is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
