--- a/arch/arm/configs/fancykernel_std_tuna_defconfig
+++ b/arch/arm/configs/fancykernel_std_tuna_defconfig
@@ -335,6 +335,7 @@ CONFIG_OMAP_ALLOW_OSWR=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
 CONFIG_OMAP4_PPA_CPU1_ONLINE_BUG=y
 CONFIG_FORCE_FAST_CHARGE=y
+# CONFIG_TUNA_1_5_GHZ_MPU_OPP is not set
 
 #
 # System MMU
